FIX: removed white spaces

--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,13 @@ html{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 body {
   min-width: 1000px;
   min-height: 100%;
-  background-color: white;
+  background-color: #F8F8F8;
   margin: 0;
 }
 
